<resources>
    <string name="app_name">Jewelry Catalog</string>

    <string name="data_analysis">Data Analysis</string>
    <string name="new_item">New Item</string>
    <string name="new_supplier">New Supplier</string>
    <string name="suppliers">Suppliers</string>

    <string name="headline_main">voyage studio</string>
    <string name="save_item">Save</string>
    <string name="items_headline">Jewelries</string>
    <string name="show_by">Show by Category</string>
    <string name="necklaces">necklaces</string>
    <string name="rings">rings</string>
    <string name="earrings">earrings</string>
    <string name="bracelets">bracelets</string>
    <string name="view_all">view all</string>

    <string name="supplier_address_box">Address</string>
    <string name="supplier_phone_box">Phone</string>
    <string name="supplier_purchase_date_box">Purchase Date</string>

    <string name="tool_shop_radio_button">Tool shop</string>
    <string name="jewelry_foundry_radio_button">Jewelry foundry</string>
    <string name="raw_material_radio_button">Raw material</string>
    <string name="misc_radio_button">Misc</string>

    <string name="jewelry_name_box">Name</string>
    <string name="jewelry_type_box">Type</string>
    <string name="jewelry_description_box">Description</string>
    <string name="jewelry_price_box">Price: %1$d₪</string>
    <string name="jewelry_price_value"></string>
    <string name="Jewelry_weight_box">Weight</string>
    <string name="jewelry_photo_box">Photo</string>
    <string name="jewelry_sales_amount">Number of units sold: %1$d</string>

    <string name="necklace_radio_button">Necklace</string>
    <string name="ring_radio_button">Ring</string>
    <string name="earring_radio_button">Earring</string>
    <string name="bracelet_radio_button">Bracelet</string>
    <string name="choose_photo_from_gallery">Choose from gallery</string>

    <string name="items_sort_by">Sort by:</string>
    <string name="filter_jewelry_items">Filter By:</string>
    <string-array name="jewelry_types">
        <item>All</item>
        <item>Necklaces</item>
        <item>Rings</item>
        <item>Earrings</item>
        <item>Bracelets</item>
    </string-array>


    <string name="text_second_frame">Jewelery has\n the power to\n be the one\n little thing\n that makes you\n feel unique</string>

    <string name="edit_item_headline">Edit Item</string>
    <string name="save_change_btn">Save Changes</string>

    <string name="jewelry_details">Jewelry Details</string>
    <string name="jewelry_img">Jewlery Image</string>
    
    <string name="suppliers_details_headline">Supplier Details</string>
    <string name="suppliers_address_details">Address</string>
    <string name="supplier_phone_details">Phone</string>
    <string name="supplier_date_details">Date of purchase</string>
    <string name="supplier_sum_details">Purchase Amount</string>
    <string name="supplier_type_details">Type</string>

    <string-array name="sort_options">
        <item>Date</item>
        <item>Price: Low to High</item>
        <item>Price: High to Low</item>
        <item>Best Sellers</item>
    </string-array>

    <string name="catalog">Catalog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="take_photo">Take a photo</string>
    <string name="upload_reception">Upload reception</string>

    <string name="delete">Delete</string>

    <string name="bi_info">BI Info</string>
    <string name="business_analytics_headline">Business Analytics</string>
    <string name="supplier_expenses_headline">Supplier Expenses</string>
    <string name="last_month">Last Month</string>
    <string name="all_time">All Time</string>
    <string name="jewelries_revenues_headline">Jewelries Revenues</string>
    <string name="profit_headline">Profit</string>
    <string name="best_seller_headline">Best Seller Item</string>
    <string name="units_counter">Units</string>
    <string name="amount_format">%1$.2f₪</string>
    <string name="no_sales">No Sales</string>
    <string name="best_seller_quantity">By Quantity</string>
    <string name="best_seller_revenue">By Revenue</string>

    <string name="photo_permission">In order to use the app, you must upload photos!</string>
    <string name="jewelry_name_details">Name: %1$s</string>
    <string name="jewelry_description_details">Description: %1$s</string>
    <string name="jewelry_price_details">Price: %1$d₪</string>
    <string name="jewelry_weight_details">Weight: %1$s</string>
    <string name="jewelry_type_details">Type: %1$s</string>

    <string name="supplier_name_details_page">Name: %1$s</string>
    <string name="supplier_address_details_page">Description: %1$s</string>
    <string name="supplier_phone_details_page">Phone: %1$s</string>
    <string name="supplier_date_of_purchase_details_page">Date of purchase: %1$s</string>
    <string name="supplier_purchase_price_details_page">Price: %1$d</string>
    <string name="supplier_type_details_page">Type: %1$s</string>

    <string name="item_updated_message">Item updated</string>
    <string name="upload_an_image_message">Please upload an image</string>
    <string name="fill_all_fields_message">Please fill all the fields</string>
    <string name="select_image_source">Select Image Source</string>
    <string name="failed_load_image_message">Failed to load image</string>
    <string name="invalid_input_message">Invalid input</string>
    <string name="jewelry_added_message">Jewelry added to catalog</string>
    <string name="supplier_added_message">Supplier purchase added</string>
    <string name="item_sold_message">Item sold</string>
    <string name="item_unsold_message">Item unsold</string>
    <string name="delete_item_message">Delete Item</string>
    <string name="are_you_sure_delete_message">Are you sure you want to delete this item?</string>
    <string name="cancel_btn">Cancel</string>

</resources>