<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/biege">


    <TextView
        android:id="@+id/mainHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/suppliers_details_headline"
        android:fontFamily="@font/vogue"
        android:textSize="22dp"
        android:layout_marginTop="20dp"/>

    <ImageButton
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_btn_ic"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/supplierImage"
        android:layout_width="200dp"
        android:layout_height="240dp"
        app:layout_constraintTop_toBottomOf="@id/mainHeadline"
        app:layout_constraintStart_toStartOf="@id/mainHeadline"
        app:layout_constraintEnd_toEndOf="@id/mainHeadline"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/supplierName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jewelry_name_box"
        android:fontFamily="@font/toolbarfont"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/supplierImage"
        app:layout_constraintStart_toStartOf="@+id/supplierImage"
        android:layout_marginTop="35dp" />

    <TextView
        android:id="@+id/supplierDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supplier_address_box"
        android:fontFamily="@font/toolbarfont"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/supplierName"
        app:layout_constraintStart_toStartOf="@+id/supplierName"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/supplierPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supplier_phone_box"
        android:fontFamily="@font/toolbarfont"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/supplierDescription"
        app:layout_constraintStart_toStartOf="@+id/supplierDescription"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/supplierPurchaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supplier_purchase_date_box"
        app:layout_constraintTop_toBottomOf="@id/supplierPhone"
        app:layout_constraintStart_toStartOf="@id/supplierPhone"
        android:fontFamily="@font/toolbarfont"
        android:textColor="@color/black"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/supplierPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jewelry_price_box"
        android:fontFamily="@font/toolbarfont"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/supplierPurchaseDate"
        app:layout_constraintStart_toStartOf="@+id/supplierPurchaseDate"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/supplierType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jewelry_type_box"
        android:fontFamily="@font/toolbarfont"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/supplierPrice"
        app:layout_constraintStart_toStartOf="@+id/supplierPrice"
        android:layout_marginTop="35dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>