<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biege">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageButton
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_btn_ic"
            android:background="@color/transparent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/mainHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/jewelry_details"
            android:fontFamily="@font/vogue"
            android:textSize="24dp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/jewelryImage"
            android:layout_width="220dp"
            android:layout_height="282dp"
            app:layout_constraintTop_toBottomOf="@id/mainHeadline"
            app:layout_constraintStart_toStartOf="@id/mainHeadline"
            app:layout_constraintEnd_toEndOf="@id/mainHeadline"
            android:layout_marginTop="35dp"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/jewelryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jewelry_name_box"
            android:fontFamily="@font/vogue"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/jewelryImage"
            app:layout_constraintStart_toStartOf="@+id/jewelryImage"
            android:layout_marginTop="35dp" />

        <TextView
            android:id="@+id/jewelryDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jewelry_description_box"
            android:fontFamily="@font/vogue"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/jewelryName"
            app:layout_constraintStart_toStartOf="@+id/jewelryName"
            android:layout_marginTop="35dp"/>

        <TextView
            android:id="@+id/jewelryPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jewelry_price_box"
            android:fontFamily="@font/vogue"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/jewelryDescription"
            app:layout_constraintStart_toStartOf="@+id/jewelryDescription"
            android:layout_marginTop="35dp"/>

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Jewelry_weight_box"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/jewelryPrice"
            app:layout_constraintStart_toStartOf="@id/jewelryPrice"
            android:fontFamily="@font/vogue"
            android:textColor="@color/black"
            android:layout_marginTop="35dp"/>

        <TextView
        android:id="@+id/jewelryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jewelry_type_box"
        android:fontFamily="@font/vogue"
        android:textColor="@color/black"
            android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/weightTextView"
        app:layout_constraintStart_toStartOf="@+id/weightTextView"
        android:layout_marginTop="35dp"/>

        <TextView
            android:id="@+id/jewelrySales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jewelry_sales_amount"
            android:fontFamily="@font/vogue"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/jewelryType"
            app:layout_constraintStart_toStartOf="@+id/jewelryType"
            android:layout_marginTop="35dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>