<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.tests.jewelry.ui.viewmodel.JewelryViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:context=".EditItem"
            android:background="@color/biege">

            <TextView
                android:id="@+id/mainHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/edit_item_headline"
                android:fontFamily="@font/vogue"
                android:textSize="22dp"/>

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="@id/mainHeadline"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/arrow_back_icon"
                android:background="@null" />

            <TextView
                android:id="@+id/jewelryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jewelry_name_box"
                android:fontFamily="@font/toolbarfont"
                app:layout_constraintTop_toBottomOf="@+id/mainHeadline"
                app:layout_constraintStart_toStartOf="@+id/mainHeadline"
                app:layout_constraintEnd_toEndOf="@+id/mainHeadline"
                android:layout_marginTop="30dp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/jewelryName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/jewelryDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jewelry_description_box"
                android:fontFamily="@font/toolbarfont"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText"
                app:layout_constraintStart_toStartOf="@+id/nameEditText"
                app:layout_constraintEnd_toEndOf="@id/nameEditText"
                android:layout_marginTop="35dp"/>

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/jewelryDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/jewelryPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jewelry_price_box"
                android:fontFamily="@font/toolbarfont"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"
                app:layout_constraintStart_toStartOf="@+id/descriptionEditText"
                app:layout_constraintEnd_toEndOf="@id/descriptionEditText"
                android:layout_marginTop="35dp"/>

            <SeekBar
                android:id="@+id/priceSeekBar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/jewelryPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:max="1000"
                android:min="0"/>

            <TextView
                android:id="@+id/weightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jewelry_weight_box"
                app:layout_constraintTop_toBottomOf="@id/priceSeekBar"
                app:layout_constraintStart_toStartOf="@id/priceSeekBar"
                app:layout_constraintEnd_toEndOf="@id/priceSeekBar"
                android:fontFamily="@font/toolbarfont"
                android:textColor="@color/black"
                android:layout_marginTop="35dp"/>

            <EditText
                android:id="@+id/weightEditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@id/weightTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/jewelryType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jewelry_type_box"
                android:fontFamily="@font/toolbarfont"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/weightEditText"
                app:layout_constraintStart_toStartOf="@+id/weightEditText"
                app:layout_constraintEnd_toEndOf="@id/weightEditText"
                android:layout_marginTop="35dp"/>


            <RadioGroup
                android:id="@+id/typeRdioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/jewelryType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/necklaceButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/necklace_radio_button"
                    android:fontFamily="@font/vogue" />

                <RadioButton
                    android:id="@+id/ring_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ring_radio_button"
                    android:fontFamily="@font/vogue" />

                <RadioButton
                    android:id="@+id/earring_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/earring_radio_button"
                    android:fontFamily="@font/vogue" />

                <RadioButton
                    android:id="@+id/braceletButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bracelet_radio_button"
                    android:fontFamily="@font/vogue" />
            </RadioGroup>

            <ImageButton
                android:id="@+id/btnTakePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/typeRdioGroup"
                app:layout_constraintStart_toStartOf="@id/priceSeekBar"
                android:src="@drawable/add_photo_icon"
                android:background="@null"
                android:layout_marginTop="50dp"/>

            <ImageView
                android:id="@+id/imageSelected"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/typeRdioGroup"
                app:layout_constraintStart_toEndOf="@id/jewelryType"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_change_btn"
                android:fontFamily="@font/vogue"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@id/btnTakePhoto"
                app:layout_constraintEnd_toEndOf="@id/btnTakePhoto"
                app:layout_constraintStart_toStartOf="@id/btnTakePhoto"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/transparent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>