<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/catalogFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Catalog">


    <FrameLayout
        android:id="@+id/toolbarBackground"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/toolbarImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/sand" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/newItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_item"
                android:background="@color/transparent"
                android:fontFamily="@font/toolbarfont"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>


    <FrameLayout
        android:id="@+id/mainFrame"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarBackground">

        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/test_photo" />

        <TextView
            android:id="@+id/mainHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginRight="80dp"
            android:layout_gravity="bottom|right"
            android:fontFamily="@font/vogue"
            android:text="@string/headline_main"
            android:textSize="23sp"
            android:textColor="@color/khaki"/>

    </FrameLayout>

    <TextView
        android:id="@+id/showBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_by"
        android:textSize="14sp"
        android:fontFamily="@font/toolbarfont"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/mainFrame"
        app:layout_constraintStart_toStartOf="@id/mainFrame" />

    <Button
        android:id="@+id/show_all_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        android:background="@color/transparent"
        android:fontFamily="@font/toolbarfont"
        android:textSize="8sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/mainFrame"
        app:layout_constraintEnd_toEndOf="@id/bracelets"/>


    <ImageButton
        android:id="@+id/necklaces"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="2dp"
        android:background="@drawable/test_photo"
        app:layout_constraintTop_toBottomOf="@id/showBy"
        app:layout_constraintStart_toStartOf="@id/showBy"/>

    <ImageButton
        android:id="@+id/rings"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="9dp"
        android:background="@drawable/test_photo"
        app:layout_constraintTop_toBottomOf="@id/showBy"
        app:layout_constraintStart_toEndOf="@id/necklaces"/>

    <ImageButton
        android:id="@+id/earrings"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="9dp"
        android:background="@drawable/test_photo"
        app:layout_constraintTop_toBottomOf="@id/showBy"
        app:layout_constraintStart_toEndOf="@id/rings"/>

    <ImageButton
        android:id="@+id/bracelets"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="9dp"
        android:background="@drawable/test_photo"
        app:layout_constraintTop_toBottomOf="@id/showBy"
        app:layout_constraintStart_toEndOf="@id/earrings"/>

    <TextView
        android:id="@+id/necklacesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/necklaces"
        android:textColor="@color/black"
        android:fontFamily="@font/toolbarfont"
        android:textSize="10sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/necklaces"
        app:layout_constraintStart_toStartOf="@id/necklaces"
        app:layout_constraintEnd_toEndOf="@id/necklaces"/>

    <TextView
        android:id="@+id/ringsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rings"
        android:textColor="@color/black"
        android:fontFamily="@font/toolbarfont"
        android:textSize="10sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/rings"
        app:layout_constraintStart_toStartOf="@id/rings"
        app:layout_constraintEnd_toEndOf="@id/rings"/>

    <TextView
        android:id="@+id/earringsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earrings"
        android:textColor="@color/black"
        android:fontFamily="@font/toolbarfont"
        android:textSize="10sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/earrings"
        app:layout_constraintStart_toStartOf="@id/earrings"
        app:layout_constraintEnd_toEndOf="@id/earrings"/>

    <TextView
        android:id="@+id/braceletsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bracelets"
        android:textColor="@color/black"
        android:fontFamily="@font/toolbarfont"
        android:textSize="10sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/bracelets"
        app:layout_constraintStart_toStartOf="@id/bracelets"
        app:layout_constraintEnd_toEndOf="@id/bracelets"/>

    <FrameLayout
        android:id="@+id/secondFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/necklacesText">

        <ImageView
            android:id="@+id/secondImage"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/test_photo"
            app:layout_constraintTop_toBottomOf="@id/bracelets"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_second_frame"
            android:fontFamily="@font/toolbarfont"
            android:textColor="@color/black"
            android:layout_gravity="center|top|right"
            android:layout_marginRight="12dp"
            android:layout_marginTop="60dp"
            android:textSize="18dp"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>